--- a/www/index.html
+++ b/www/index.html
@@ -174,6 +174,7 @@
 <link rel="stylesheet" href="./css/build/fileBrowser.css">
 <link rel="stylesheet" href="./css/build/main.css">
 <link rel="stylesheet" href="./css/build/plugins.css">
+<link rel="stylesheet" href="./css/build/src_lib_extensions_languageclient_index_js.css">
 <link rel="stylesheet" href="./css/build/src_lib_extensions_terminal_js-node_modules_xterm_css_xterm_css.css">
 <link rel="stylesheet" href="./css/build/src_pages_quickTools_quickTools_js.css">
 <link rel="stylesheet" href="./css/build/src_sidebarApps_extensions_index_js.css">
