--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./res/icons/style.css" />
     <link rel="stylesheet" href="./res/file-icons/style.css" />
 
+    <script src="./js/tag.js"></script>
     <script src="./js/eruda.min.js"></script>
     <script>
       eruda.init();
@@ -164,11 +165,28 @@
       }
     </style>
 
+    <!-- <link rel="stylesheet" href="./bundle/main.css"></link> -->
+    <!-- <script src="./bundle/main.js" type="module"></script> -->
     <script src="./js/build/main.build.js"></script>
 
         <title>Acode</title>
 
+
 <!--styles-->
+<link rel="stylesheet" href="./css/build/about.css">
+<link rel="stylesheet" href="./css/build/customTheme.css">
+<link rel="stylesheet" href="./css/build/donate.css">
+<link rel="stylesheet" href="./css/build/fileBrowser.css">
+<link rel="stylesheet" href="./css/build/main.css">
+<link rel="stylesheet" href="./css/build/plugins.css">
+<link rel="stylesheet" href="./css/build/src_lib_extensions_languageclient_index_js.css">
+<link rel="stylesheet" href="./css/build/src_lib_extensions_terminal_js-node_modules_xterm_css_xterm_css.css">
+<link rel="stylesheet" href="./css/build/src_pages_quickTools_quickTools_js.css">
+<link rel="stylesheet" href="./css/build/src_sidebarApps_extensions_index_js.css">
+<link rel="stylesheet" href="./css/build/src_sidebarApps_files_index_js.css">
+<link rel="stylesheet" href="./css/build/src_sidebarApps_git_index_js.css">
+<link rel="stylesheet" href="./css/build/src_sidebarApps_searchInFiles_index_js.css">
+<link rel="stylesheet" href="./css/build/themeSetting.css">
 <!--styles_end-->
 </head>
 
