feat(build): Improved vite support

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       };
     </script>
 
-    <script src="cordova.js"></script>
+    <script src="./www/cordova.js"></script>
     <script src="./www/js/emmet-core.js"></script>
     <script src="./www/js/ace/ace.js"></script>
     <script src="./www/js/ace/ext-beautify.js"></script>
@@ -181,15 +181,10 @@
         text-align: center;
       }
     </style>
-    <!--     <script src="./js/build/main.build.js"></script> -->
     <script src="./src/lib/main.js" type="module"></script>
 
     <title>Acode</title>
-
-<!--styles-->
-<!--styles_end-->
   </head>
-
   <body class="loading splash" data-version="">
     <wc-page id="root" class="primary"></wc-page>
   </body>
